# memeora

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/commands/: ship.md
.claude/hooks/: rustfmt-edited.sh
.githooks/: post-checkout  post-commit  pre-commit
.github/: build-setup.yml
.github/workflows/: ci.yml  release.yml
adapters/: README.md
adapters/_descriptors/: antigravity.toml  claude.toml  codex.toml
adapters/antigravity/: README.md
adapters/antigravity/plugins/memeora/: hooks.json  mcp_config.json  plugin.json
adapters/claude-code/: README.md
adapters/claude-code/.claude-plugin/: plugin.json
adapters/claude-code/commands/: context.md
adapters/claude-code/hooks/: hooks.json
adapters/claude-code/skills/remember/: SKILL.md
adapters/codex/: .mcp.json  README.md  config.toml
adapters/codex/.codex-plugin/: plugin.json
adapters/codex/hooks/: hooks.json
adapters/opencode/: README.md  package.json  tsconfig.json
adapters/opencode/src/: index.ts
crates/bench/: Cargo.toml  README.md
crates/bench/src/: embedder.rs  harness.rs  hash.rs  lib.rs  main.rs  metrics.rs  report.rs  split.rs
crates/bench/src/datasets/: locomo.rs  longmemeval.rs  mod.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: container_tag.rs  error.rs  lib.rs  models.rs  privacy.rs
crates/core/src/consolidate/: llm.rs  mod.rs
crates/core/src/db/: mod.rs  schema.rs
crates/core/src/dynamics/: mod.rs
crates/core/src/embed/: cache.rs  fastembed.rs  mod.rs
crates/core/src/entity/: mod.rs
crates/core/src/extract/: heuristic.rs  llm.rs  mod.rs
crates/core/src/ingest/: mod.rs
crates/core/src/profile/: mod.rs
crates/core/src/search/: fastembed.rs  mod.rs  query.rs
crates/core/src/store/: mod.rs  sqlite.rs
crates/core/src/temporal/: mod.rs
crates/core/tests/: retrieval_bench.rs
crates/daemon/: Cargo.toml  build.rs
crates/daemon/src/: dashboard.rs  engine.rs  lib.rs  main.rs  run.rs  server.rs
crates/hook/: Cargo.toml
crates/hook/src/: descriptor.rs  lib.rs  main.rs  run.rs
crates/hook/tests/: conformance.rs
crates/hook/tests/fixtures/antigravity/: capture-unknown-shape.json  pre-invocation-first.json  pre-invocation-later.json  stop.json
crates/hook/tests/fixtures/claude/: capture-redacts-secrets.json  capture-session-activity.json  capture-strips-injected-memory.json  session-start.json  stop.json
crates/hook/tests/fixtures/codex/: capture-session-activity.json  session-start.json  stop.json
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs  main.rs
crates/proto/: Cargo.toml
crates/proto/src/: frame.rs  lib.rs
dashboard/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
dashboard/src/: App.svelte  Graph.svelte  app.css  main.ts  orb-program.ts
dashboard/src/lib/: api.ts
docs/: ADAPTERS.md  ARCHITECTURE.md  PROTOCOL.md  VISION.md
scripts/: check.sh  install.sh  seed-demo-from-graphify.py
sdk/ts/: README.md  package.json  tsconfig.json
sdk/ts/src/: index.ts
sdk/ts/test/: client.test.ts  parity.test.ts
