[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.1"
edition = "2024"
rust-version = "1.95"
license = "MIT OR Apache-2.0"
repository = "https://github.com/saatvik333/memeora"
homepage = "https://github.com/saatvik333/memeora"
authors = ["the memeora authors"]

# Shared internal crates — referenced by member crates via `.workspace = true`.
[workspace.dependencies]
memeora-core = { path = "crates/core" }
memeora-proto = { path = "crates/proto" }
memeora-client = { path = "crates/client" }
memeora-daemon = { path = "crates/daemon" }
memeora-hook = { path = "crates/hook" }
memeora-mcp = { path = "crates/mcp" }

# Shared third-party deps (pinned once for the whole workspace).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
interprocess = "2"
dirs = "6"
clap = { version = "4", features = ["derive"] }

[profile.release]
lto = "thin"
strip = true

# The profile `dist` builds release artifacts with (inherits the tuned release profile).
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.32.0"
# CI backends to support
ci = "github"
# Build the embedded dashboard through cargo-dist's supported workflow hook.
github-build-setup = "../build-setup.yml"
# The installers to generate for each app
installers = ["shell", "powershell", "npm", "homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "saatvik333/homebrew-tap"
# A namespace to use when publishing this package to the npm registry
npm-scope = "@memeora"
# Publish jobs to run in CI
publish-jobs = ["homebrew", "npm"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "aarch64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "x86_64-pc-windows-msvc",
]
# Checksums to generate for each App
checksum = "sha256"
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
# Native arm64 Linux runner so `ort` gets a prebuilt aarch64 ONNX Runtime
# (cross-compiling from x86_64 would leave the binary without its native lib).
[workspace.metadata.dist.github-custom-runners]
aarch64-unknown-linux-gnu = "ubuntu-22.04-arm"
