[package]
name = "memeora"
description = "memeora CLI: install/serve/doctor/index/dashboard"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "memeora"
path = "src/main.rs"

[dependencies]
memeora-client.workspace = true
memeora-proto.workspace = true
