[package]
name = "memeora-client"
description = "Rust client for the memeora daemon IPC protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
memeora-proto.workspace = true
interprocess.workspace = true

[dev-dependencies]
memeora-daemon.workspace = true
memeora-core.workspace = true
