[package]
name = "memeora-core"
description = "memeora engine: storage, embeddings, extraction, graph and hybrid search"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []
# Local ONNX embeddings via fastembed. Opt-in here so a `-p memeora-core` build/test
# stays fast (no ONNX stack to compile); the daemon/cli enable it, so any workspace-wide
# build unifies it ON for core too. Tests stay offline either way: the model-downloading
# tests are `#[ignore]`d, feature or not.
fastembed = ["dep:fastembed"]

[dependencies]
rusqlite = { version = "0.40.1", features = ["bundled"] }
rusqlite_migration = "2.6.0"
sha2 = "0.11.0"
sqlite-vec = "0.1.9"
dirs.workspace = true
# Opt-in LLM extractor tier: JSON request/response for the OpenAI-compatible endpoint.
# Already in the workspace tree (hook/daemon/mcp), so no new license for cargo-deny.
serde = { workspace = true }
serde_json = { workspace = true }
fastembed = { version = "5", optional = true }
