[package]
name = "memeora-daemon"
description = "memeora long-lived daemon: holds models + DB, serves IPC, sole DB writer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

# The `memeora-daemon` binary is shipped from the `memeora` crate (one dist app
# bundles all binaries); this crate is the daemon library behind it.
[dependencies]
memeora-core = { workspace = true, features = ["fastembed"] }
memeora-proto.workspace = true
memeora-client.workspace = true
interprocess.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time"] }
axum = "0.8"
tokio-stream = { version = "0.1", features = ["sync"] }
rust-embed = { version = "8", features = ["mime-guess"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
