[package]
name = "memeora-hook"
description = "Multi-host hook binary for Claude Code / Codex / Antigravity command-hooks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lib]
name = "memeora_hook"
path = "src/lib.rs"

# The `memeora-hook` binary is shipped from the `memeora` crate (one dist app
# bundles all binaries); this crate is the hook library behind it.
[dependencies]
memeora-client.workspace = true
memeora-proto.workspace = true
memeora-core.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml = "0.9"
