[package]
name = "memeora-mcp"
description = "memeora MCP server (rmcp) exposing memory/recall/context/list tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
memeora-proto.workspace = true
memeora-client.workspace = true
