[package]
name = "memeora-mcp"
description = "memeora MCP server (rmcp) exposing memory/recall/context/list tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
memeora-proto.workspace = true
memeora-client.workspace = true
rmcp = { version = "1.7.0", features = ["server", "macros", "transport-io", "schemars"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "io-std"] }
schemars = "1.2.1"
serde = { workspace = true, features = ["derive"] }
